Apply BLE boost and keymap changes

--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -4,3 +4,6 @@
 
 # Uncomment the following line to enable the Lily58 OLED Display
 # CONFIG_ZMK_DISPLAY=y
+
+# ADDED -> Uncomment to boost board's BLE radio transmit power for bluetooth connectivity issues
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
