--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -6,4 +6,4 @@
 # CONFIG_ZMK_DISPLAY=y
 
 # ADDED -> Uncomment to boost board's BLE radio transmit power for bluetooth connectivity issues
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+# CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
